src/styled-props/font/font.css
@define-mixin font {
  /*
    Expose this variable to allow <Link/> component to
    set custom font size
  */
  --font-size: var(--font-size-normal);

  &.font {
    font-size: var(--font-size);
    font-weight: normal;
    font-family: var(--font-family);

    white-space: normal;
    line-height: var(--line-height);
    letter-spacing: 0.5px;
  }

  &.font-h1 {
    --font-size: var(--font-size-large);
    --line-height: 1.3;
  }

  &.font-h2 {
    --font-size: var(--font-size-medium);
    --line-height: 1.3;
  }

  &.font-h3 {
    --font-size: var(--font-size-normal);
    ---line-height: 1.3;
  }

  &.font-h4 {
    --font-size: var(--font-size-small);
    --line-height: 1.3;
  }

  &.font-h5 {
    --font-size: 16px;
    --line-height: 24px;
    font-weight: 600;
  }

  &.font-h6 {
    --font-size: 14px;
    --line-height: 24px;
    font-weight: 600;
    margin-bottom: 16px;
  }

  &.font-size-large,
  &.font-large {
    --font-size: var(--font-size-large);
  }

  &.font-size-medium,
  &.font-medium {
    --font-size: var(--font-size-medium);
  }

  &.font-size-normal,
  &.font-normal {
    --font-size: var(--font-size-normal);
  }

  &.font-size-small,
  &.font-small {
    --font-size: var(--font-size-small);
  }

  &.font-size-xsmall,
  &.font-xsmall {
    --font-size: var(--font-size-xsmall);
  }

  &.font-weight-light {
    font-weight: 300;
  }

  &.font-weight-bold {
    font-weight: bold;
  }

  &.font-weight-semi-bold {
    font-weight: 500;
  }

  &.font-align-left {
    text-align: left;
  }

  &.font-align-center {
    text-align: center;
  }

  &.font-align-right {
    text-align: right;
  }

  &.font-italic {
    font-style: italic;
  }

  &.font-mono {
    font-family: var(--font-family-mono);
  }
}

